css/main.css
.clear {
	clear: both;
}

div.full-height {
	overflow: auto;
}

body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
	line-height: 20px;
	color: #333;
	overflow: hidden;
}

h1, h2, h3, h4, h5, h6 {
	line-height: 1em;
}

pre,
code {
	background: #eee;
	padding: 1px 5px 1px 5px;
}

pre {
	padding: 5px;
}

pre .highlight {
	background: #ddd;
}

pre code {
	padding: 0;
}

blockquote {
	border-left: 5px solid #eee;
	margin: 1em 0;
	padding-left: 10px;
}

#left-column,
#right-column {
	float: left;
	width: 50%;
}

.wrapper {
	position: relative;
	padding: 20px;
}

#left-column .wrapper {
	padding-right: 19px;
	border-right: 1px solid #f7f7f7;
}

#right-column .wrapper {
	padding-left: 19px;
	border-left: 1px solid #f7f7f7;
}

.overlay {
	position: absolute;
	top: 20px;
	right: 40px;
}

.overlay.fullscreen {
	display: none;
}

.overlay .button,
.overlay .button-container {
	float: left;
}

.overlay .button {
	background: #fff;
	margin-right: 5px;
	padding: 0 6px;
	color: #999;
	text-decoration: none;
	font-size: 11px;
	border: 1px solid #ddd;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;
	-moz-transition: opacity .5s;
	-webkit-transition: opacity .5s;
	-o-transition: opacity .5s;
	transition: opacity .5s;
	opacity: .5;
}

.overlay .button.symbol {
	font-size: 14px;
}

.overlay .button:hover {
	-webkit-box-shadow: inset 0 -1px 1px rgba(0,0,0,.1);
	-moz-box-shadow: inset 0 -1px 1px rgba(0,0,0,.1);
	box-shadow: inset 0 -1px 1px rgba(0,0,0,.1);
}

.overlay .button:active,
.overlay .button.active {
	background-color: #f9f9f9;
	text-shadow: 1px 1px #fff;
	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1);
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.1);
}

.wrapper:hover .overlay .button,
body:hover .overlay.fullscreen .button {
	opacity: 1;
}

.overlay .button.switch {
	margin: 0 0 0 -1px;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	border-radius: 0;
}

.overlay .button.switch:first-of-type {
	-moz-border-top-left-radius: 3px;
	-webkit-border-top-left-radius: 3px;
	border-top-left-radius: 3px;
	-moz-border-bottom-left-radius: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-left-radius: 3px;
}

.overlay .button.switch:last-of-type {
	margin-right: 5px;
	-moz-border-top-right-radius: 3px;
	-webkit-border-top-right-radius: 3px;
	border-top-right-radius: 3px;
	-moz-border-bottom-right-radius: 3px;
	-webkit-border-bottom-right-radius: 3px;
	border-bottom-right-radius: 3px;
}

.overlay .button.icon-fullscreen {
	width: 13px;
	height: 20px;
	background-image: url('../images/fullscreen-icon.png');
	background-repeat: no-repeat;
	background-position: center center;
}

#left-column #markdown,
#right-column #html {
	display: block;
	width: 100%;
	resize: none;
	margin: 0;
	padding: 0;
	border: 0;
}

#left-column #markdown:focus,
#right-column #html:focus {
	outline: none;
}

#left-column #top_panels_container .top_panel {
	display: none;
	position: relative;
	padding: 20px;
	background: #fff;
	border-bottom: 2px solid #f7f7f7;
}

#left-column #top_panels_container .top_panel a {
	color: #333;
}

#left-column #top_panels_container .top_panel .close {
	position: absolute;
	top: 20px;
	right: 20px;
	width: 14px;
	height: 14px;
	padding: 3px;
	line-height: 14px;
	font-size: 14px;
	text-align: center;
	color: #ddd;
	cursor: pointer;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
}

#left-column #top_panels_container .top_panel .close:hover {
	color: #999;
	background: #f7f7f7;
}

#quick-reference {
	font-size: 12px;
	line-height: 1.25em;
}

#quick-reference table {
	border-collapse: collapse;
	border-spacing: 0;
}

#quick-reference table td {
	padding: 1px 0;
}

#quick-reference table td:first-child {
	cursor: pointer;
}

#quick-reference table td:last-child {
	padding-left: 20px;
}

#quick-reference table td pre,
#quick-reference table td p {
	margin: 0;
}

#quick-reference p {
	margin-bottom: 0;
}

.fullscreen #left-column,
.fullscreen #right-column {
	float: none;
	width: 100%;
}

.fullscreen #left-column .wrapper {
	border-right-color: transparent;
}

.fullscreen #right-column .wrapper {
	border-left-color: transparent;
}

.fullscreen #left-column #markdown,
.fullscreen #right-column #html {
	max-width: 800px;
	margin: 0 auto;
}

.fullscreen .overlay {
	display: none;
}

.fullscreen .overlay.fullscreen {
	display: block;
}

